--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Create commit
         run: |
             git clone https://github.com/ros-industrial/ros2_canopen.git --branch gh-pages --single-branch gh-pages
-            git fetch origin gh-pages:refs/remotes/origin/gh-pages
+            git pull origin
             cp -r ./doc/_build/html/* gh-pages/
             cd gh-pages
             git config --local user.email "action@github.com"
